--- a/styles.css
+++ b/styles.css
@@ -1,84 +1,100 @@
 /* Import Google font */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
 }
-
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background: #E3F2FD;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #E3F2FD;
 }
-
 .wrapper {
-    width: 65vmin;
-    height: 70vmin;
-    display: flex;
-    overflow: hidden;
-    flex-direction: column;
-    justify-content: center;
-    border-radius: 5px;
-    background: #293447;
-    box-shadow: 0 20px 40px rgba(52, 87, 220, 0.2);
+  display: flex;
+  flex-direction: column; /* Asegurar que los elementos estén en columna */
+  justify-content: flex-start; /* Alinear los elementos al inicio */
+  align-items: stretch; /* Asegurar que los elementos ocupen todo el ancho */
+  width: 65vmin;
+  height: 70vmin;
+  border-radius: 5px;
+  background: #293447;
+  box-shadow: 0 20px 40px rgba(52, 87, 220, 0.2);
+  overflow: hidden;
 }
-
 .game-details {
-    color: #B8C6DC;
-    font-weight: 500;
-    font-size: 1.2rem;
-    padding: 20px 27px;
-    display: flex;
-    justify-content: space-between;
+  flex: 0 0 auto; /* Asegurar que la barra superior no crezca */
+  color: #B8C6DC;
+  font-weight: 500;
+  font-size: 1.2rem;
+  padding: 20px 27px;
+  display: flex;
+  justify-content: space-between;
+  background: #212837; /* Fondo para diferenciar la barra superior */
 }
-
 .play-board {
-    height: 100%;
-    width: 100%;
-    display: grid;
-    background: #212837;
-    grid-template: repeat(30, 1fr) / repeat(30, 1fr);
+  flex: 1 1 auto; /* Permitir que el área de juego ocupe el espacio restante */
+  display: grid;
+  background: #212837;
+  grid-template: repeat(var(--grid-size, 30), 1fr) / repeat(var(--grid-size, 30), 1fr);
 }
-
 .play-board .food {
-    background: #FF003D;
+  background: #FF003D;
 }
 .play-board .head {
-    background: #60CBFF;
+  background: url('./imagenes/cabeza.png') no-repeat center;
+}
+.play-board .torso {
+  background: url('./imagenes/torzo.png') no-repeat center;
+}
+.play-board .tail {
+  background: url('./imagenes/cola.png') no-repeat center;
+}
+.play-board .head,
+.play-board .torso,
+.play-board .tail {
+  background-size: 120%; /* Aumentar el tamaño de las imágenes al 120% */
+  background-position: center;
+  width: 100%; /* Asegurarse de que ocupen todo el ancho de la celda */
+  height: 100%; /* Asegurarse de que ocupen todo el alto de la celda */
+  transform-origin: center; /* Rotar desde el centro */
+}
+.play-board .obstacle {
+  background: #FF0000; /* Color rojo para los obstáculos */
+  border-radius: 5px; /* Bordes redondeados */
 }
 
 .controls {
-    display: none;
-    justify-content: space-between;
+  display: none;
+  justify-content: space-between;
 }
 .controls i {
-    padding: 25px 0;
-    text-align: center;
-    font-size: 1.3rem;
-    color: #B8C6DC;
-    width: calc(100% / 4);
-    cursor: pointer;
-    border-right: 1px solid #171B26;
+  padding: 25px 0;
+  text-align: center;
+  font-size: 1.3rem;
+  color: #B8C6DC;
+  width: calc(100% / 4);
+  cursor: pointer;
+  border-right: 1px solid #171B26;
 }
 
 @media screen and (max-width: 800px) {
-    .wrapper {
-        width: 90vmin;
-        height: 115vmin;
-    }
-    .game-details {
-        font-size: 1rem;
-        padding: 15px 27px;
-    }
-    .controls {
-        display: flex;
-    }
-    .controls i {
-        padding: 15px 0;
-        font-size: 1rem;
-    }
+  .wrapper {
+    width: 90vmin;
+    height: 115vmin;
+  }
+  .game-details {
+    font-size: 1rem;
+    padding: 15px 27px;
+  }
+  .controls {
+    display: flex;
+  }
+  .controls i {
+    padding: 15px 0;
+    font-size: 1rem;
+  }
 }
